second try to fix too large images in medium cards onOutlook

--- a/test/dummy/app/components/dummy/mailer/cards/medium_component.sass
+++ b/test/dummy/app/components/dummy/mailer/cards/medium_component.sass
@@ -32,7 +32,6 @@ $dummy-mailer-styles: false !default
 
     &__image
       border-radius: $mailer-border-radius-sm
-      width: 200px
 
     &__content-wrapper
       width: 100%
